--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/server/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bower install bootstrap-css && gulp"
+    "start": "preinstall && gulp",
+    "preinstall": "bower install bootstrap-css"
   },
   "keywords": [
     "isomorphic",
@@ -28,7 +29,6 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-react": "^3.0.1",
-    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "node-libs-browser": "^0.5.2",
     "path": "^0.11.14",
@@ -37,5 +37,6 @@
     "reactify": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "devDependencies": {}
 }
