--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/server/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "preinstall && gulp",
+    "start": "npm run preinstall && gulp",
     "preinstall": "bower install bootstrap-css"
   },
   "keywords": [
@@ -38,5 +38,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp-util": "^3.0.5"
+  }
 }
