--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
     "gulp-react": "^3.0.1",
     "gulp-uglify": "^1.2.0",
     "node-libs-browser": "^0.5.2",
